# libbsctools

./: ChangeLog  Makefile.am  README  boost-build.jam  bootstrap  configure.ac  package_builder.pl
pcfparser/: Jamroot  Makefile  Makefile.am  PATHS  ParaverTraceConfig.cpp  ParaverTraceConfig.h  ParaverTraceConfigGrammar.ipp  README  UIParaverTraceConfig.cpp  UIParaverTraceConfig.h  boost-build.jam  configure.ac
pcfparser/src/: Makefile.am  ParaverTraceConfig.cpp  ParaverTraceConfig.h  ParaverTraceConfigGrammar.ipp  README_PYTHON  UIParaverTraceConfig.cpp  UIParaverTraceConfig.h
pcfparser/src/test/: Jamfile  Makefile.am  TestUIParaverTraceConfig.cpp  badtrace.pcf  matmul_wf.pcf  sampletrace.pcf
pcfparser/test/: Jamfile  Makefile.am  TestUIParaverTraceConfig.cpp
prvparser/: Makefile.am  configure.ac
prvparser/config/: boost-macros.m4
prvparser/example/: Makefile.am  Makefile.in  Makefile.todistribute  example1.cpp  example2.cpp  example3.cpp  example4.cpp
prvparser/scripts/: Makefile.am  prvparser-config.in
prvparser/src/: Makefile.am  Makefile.in  ParaverBodyGrammar.h  ParaverDump.h  ParaverHeaderGrammar.cpp  ParaverHeaderGrammar.h  ParaverRecord.h  ParaverTrace.cpp  ParaverTrace.h  ParaverTraceApplication.cpp  ParaverTraceApplication.h  ParaverTraceCPU.cpp  ParaverTraceCPU.h  ParaverTraceNode.cpp  ParaverTraceNode.h  ParaverTraceTask.cpp  ParaverTraceTask.h  ParaverTraceThread.cpp  ParaverTraceThread.h  ParaverTraceUnits.h  UIParaverTrace.cpp  UIParaverTrace.h
test/minimal_grammar_example/: Makefile  README  minimal_test.cpp  test.txt
